Bug 116346 - Displaying problems with the left sidebar.
Summary: Displaying problems with the left sidebar.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Ergonomy (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-14 14:57 UTC by Tung NGUYEN
Modified: 2022-01-20 04:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tung NGUYEN 2005-11-14 14:57:24 UTC
Version:           0.8.0-rc (using KDE KDE 3.4.2)
Installed from:    Compiled From Sources
OS:                Linux

Situation 1:
===========
- In DigiKam, select an album to display its contents.
- Click on the button "Albums" of the left sidebar to hide the albums tree.
- Quit DigiKam.
- Restart DigiKam.
- Re-click on the button "Albums" of the left sidebar to show the albums tree.

=> now, if you select another album, its contents is not displayed. No message in Konsole.

Situation 2:
===========
- In DigiKam, in the "Dates" view, select a month to display its contents.
- Click on the button "Dates" of the left sidebar to hide the dates tree.
- Quit DigiKam.
- Restart DigiKam.

=> now, the contents of the current month is not displayed (blank area instead) and if you re-click on the button "Dates" of the left sidebar then it shows the "Albums" view !

I have the same situation for the "Tags" view and the "Searches" view.
Comment 1 caulier.gilles 2005-11-14 15:02:48 UTC
I can reproduce it here. I suspect a problem relevant of widget rules in sidebar implementation.

Joern, your viewpoint ?

Gilles
Comment 2 Joern Ahrens 2005-11-19 10:01:11 UTC
On Monday 14 November 2005 15:02, Gilles Caulier wrote:
> Joern, your viewpoint ?

Cool feature.... ;-) I will check that.

... J
Comment 3 Joern Ahrens 2005-11-19 11:21:06 UTC
SVN commit 481497 by jahrens:

The initial widget wasn't properly set if the sitebar was started minimized.

BUG: 116346


 M  +7 -1      sidebar.cpp  


--- trunk/extragear/graphics/digikam/libs/widgets/sidebar.cpp #481496:481497
@@ -75,7 +75,13 @@
     minimized = config->readNumEntry("Minimized", m_minimizedDefault);
         
     if(minimized)
+    {
         m_activeTab = tab;
+        setTab(m_activeTab, true);
+        m_stack->raiseWidget(m_activeTab);
+
+        emit signalChangedTab(m_stack->visibleWidget());        
+    }
     else
         m_activeTab = -1;
     
@@ -135,7 +141,7 @@
         m_stack->raiseWidget(m_activeTab);
         
         if(m_minimized)
-            expand();    
+            expand();
 
         emit signalChangedTab(m_stack->visibleWidget());
     }
Comment 4 Tung NGUYEN 2005-11-19 19:17:53 UTC
Hi Joern!

I have tested your SVN commit 481497, and now all the views of the left sidebar have a correct behaviour.

Thank you very much for the fix. Have a good week-end.
---
Tung.