The initial widget wasn't properly set if the sitebar was started minimized.

BUG: 116346

svn path=/trunk/extragear/graphics/digikam/; revision=481497